--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+          version: "0.6.17"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -36,7 +40,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-         pytest --cov-report "xml:coverage.xml" --cov=.
+         uv run pytest --cov-report "xml:coverage.xml" --cov=.
     - name: Create Coverage
       if: ${{ github.event_name == 'pull_request' }}
       uses: orgoro/coverage@v3
