--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "flake8>=7.2.0",
     "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
 ]
